--- a/style2.css
+++ b/style2.css
@@ -1,13 +1,31 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
-body{
+body {
     margin: 0;
     display: flex;
     justify-content: center;
-    height: 100vh;
     align-items: center;
+    height: 100vh;
     background-color: salmon;
     font-family: "Permanent Marker", cursive;
-    
+    text-align: center;
+}
+
+h1 {
+    font-size: 2.5rem;
+    color: black;
+}
+
+span {
+    color: yellow;
+    border-right: 3px solid black; /* Cursor effect */
+    padding-right: 5px;
+    animation: blink 0.7s infinite;
+}
+
+/* Cursor blinking animation */
+@keyframes blink {
+    50% {
+        border-color: transparent;
+    }
 }
